fix z-index

--- a/src/css/modal-window-books.css
+++ b/src/css/modal-window-books.css
@@ -5,7 +5,7 @@
   background-color: rgba(46, 47, 66, 0.4);
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 9999;
   display: flex;
   justify-content: center;
   padding: 32px 16px;
